--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "dexie": "https://esm.sh/dexie@4.0.1",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
+    "xlsx": "https://esm.sh/xlsx@0.18.5",
+    "qrcode": "https://esm.sh/qrcode@1.5.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
